# ketchup

./: Cargo.toml  README.md  flake.nix  next-todo.txt  rules.md
examples/: minimal.rs
examples/benchmark/: Cargo.toml
examples/benchmark/src/: main.rs  nom_parser.rs
examples/maths-interpreter/: Cargo.toml
examples/maths-interpreter/src/: error.rs  interpreter.rs  lib.rs  main.rs  parser.rs  span.rs  token.rs
ketchup/: Cargo.toml  README.md
ketchup-codegen/: Cargo.toml
ketchup-codegen/src/: errors.rs  lib.rs  parser.rs
ketchup-codegen/tests/: test.rs
ketchup-derive/: Cargo.toml
ketchup-derive/src/: lib.rs
ketchup/examples/maths-interpreter/: Cargo.toml
ketchup/examples/maths-interpreter/src/: main.rs
ketchup/src/: asa.rs  error.rs  lib.rs  main.rs  node.rs  parser.rs  token_info.rs
src/: asa.rs  error.rs  lib.rs  node.rs  oper.rs  parse.rs  parser.rs  prelude.rs
tests/: basic.rs
