[package]
name = "ketchup"
version = "2.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A parser that can *ketch-up* with your programming language."
authors = [ "kalscium <kalscium@protonmail.com>" ]
readme = "README.md"
repository = "https://github.com/kalscium/ketchup"
categories = [ "parsing", "text-processing" ]
keywords = [ "parser", "syntax", "token", "language", "parsing" ]

[lib]
name = "ketchup"
path = "src/lib.rs"

[dependencies]
# ketchup-derive = { path = "../ketchup-derive" }

[workspace]
members = ["examples/maths-interpreter"
  # "examples/*"
]
