[package]
name = "ketchup"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A parser that can *ketch-up* with your programming language."
authors = [ "GreenChild04" ]

[lib]
name = "ketchup"
path = "src/lib.rs"

[dependencies]
ketchup-derive = { path = "../ketchup-derive" }
